# ollama-agent

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md
deploy/: README.md
deploy/docker/: README.md  docker-compose.yml
deploy/launchd/: README.md  com.user.ollama-agent.plist
deploy/systemd/: README.md  install.sh  ollama-agent-user.service  ollama-agent.service
examples/: client.rs
src/: keychain.rs  main.rs
