[package]
name = "ollama-agent"
version = "0.1.0"
edition = "2021"

[features]
default = []
keychain = ["security-framework", "directories"]

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
futures = "0.3"
clap = { version = "4.4", features = ["derive", "env"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
# Optional dependencies for macOS Keychain support
security-framework = { version = "2.9", optional = true }
directories = { version = "5.0", optional = true }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[example]]
name = "client"
path = "examples/client.rs"
